--- a/.travis.yml
+++ b/.travis.yml
@@ -25,7 +25,7 @@ matrix:
         - python3 -m pip install cibuildwheel==1.3.0
       script:
         # build the wheels, put them into './wheelhouse'
-        - cd python-package; python3 -m cibuildwheel --output-dir wheelhouse
+        - cd python-package; CIBW_BEFORE_BUILD="yum install -y lapack-devel blas-devel" python3 -m cibuildwheel --output-dir wheelhouse
       after_success:
         # if the release was tagged, upload them to PyPI
         - |
