--- a/.travis.yml
+++ b/.travis.yml
@@ -6,7 +6,6 @@ matrix:
         include:
           # perform a linux build
           - services: docker
-            env: CIBW_BEFORE_BUILD="yum install -y lapack-devel blas-devel"
           # and a mac build
           - os: osx
             language: shell
@@ -18,14 +17,14 @@ matrix:
               - export PATH="/c/Python38:/c/Python38/Scripts:$PATH"
       env:        
         global:
-          - CIBW_BEFORE_BUILD="yum install -y lapack-devel blas-devel"
           - TWINE_USERNAME=__token__
           # Note: TWINE_PASSWORD is set to a PyPI API token in Travis settings
       install:
         - python3 -m pip install cibuildwheel==1.3.0
       script:
         # build the wheels, put them into './wheelhouse'
-        - cd python-package; CIBW_BEFORE_BUILD="yum install -y lapack-devel blas-devel" python3 -m cibuildwheel --output-dir wheelhouse
+        - make exportpy
+        - cd build/python; CIBW_BEFORE_BUILD="yum install -y lapack-devel git blas-devel; " python3 -m cibuildwheel --output-dir wheelhouse
       after_success:
         # if the release was tagged, upload them to PyPI
         - |
