--- a/python-package/CMakeLists.txt
+++ b/python-package/CMakeLists.txt
@@ -1,24 +1,22 @@
 cmake_minimum_required(VERSION 3.0)
 set(target "targeted_c")
 
-set(RUN_TESTS FALSE)
-set(CMAKE_CXX_STANDARD 14)
+set(RUN_TESTS TRUE)
+set(CMAKE_CXX_STANDARD 11)
 set(CMAKE_CXX_STANDARD_REQUIRED ON)
-set(CMAKE_BUILD_WITH_INSTALL_RPATH ON)
+#set(CMAKE_BUILD_WITH_INSTALL_RPATH ON)
+#set(CMAKE_INSTALL_RPATH_USE_LINK_PATH TRUE)
 
-if (CMAKE_VERSION VERSION_LESS 3.0)
-  project(${target} CXX)
-  set(PROJECT_VERSION 0.1)
+if(APPLE)
+  set(CMAKE_INSTALL_RPATH "@executable_path")
+  set(CMAKE_INSTALL_NAME_DIR "@executable_path")
+  set(CMAKE_BUILD_WITH_INSTALL_RPATH ON)
 else()
-  cmake_policy(SET CMP0048 NEW)
-  project(${target} CXX)
+  set(CMAKE_BUILD_WITH_INSTALL_RPATH ON)
+  set(CMAKE_INSTALL_RPATH "$ORIGIN")
 endif()
-
-
-
-################################################################################
-# Libraries
-################################################################################
+ 
+project(${target} CXX)
 
 find_program(CCACHE_FOUND ccache)
 if(CCACHE_FOUND)
@@ -36,6 +34,10 @@ if (UNIX AND NOT APPLE)
   endif()
 endif()
 
+################################################################################
+# Libraries
+################################################################################
+
 # find Python
 FIND_PACKAGE(PythonInterp REQUIRED 3)
 FIND_PACKAGE(PythonLibs REQUIRED 3)
@@ -50,13 +52,13 @@ else()
   add_subdirectory(src/armadillo)
   include_directories(src/armadillo/include)
 endif ()
-message( [Main] " ARMADILLO_LIBRARIES = ${ARMADILLO_LIBRARIES}")
-message( [Main] " ARMADILLO_INCLUDE_DIRS = ${ARMADILLO_INCLUDE_DIRS}")
 
+message([Main] " ARMADILLO_LIBRARIES = ${ARMADILLO_LIBRARIES}")
+message([Main] " ARMADILLO_INCLUDE_DIRS = ${ARMADILLO_INCLUDE_DIRS}")
 
-message(STATUS "PYTHON_LIBRARIES = ${PYTHON_LIBRARIES}")
-message(STATUS "PYTHON_EXECUTABLE = ${PYTHON_EXECUTABLE}")
-message(STATUS "PYTHON_INCLUDE_DIRS = ${PYTHON_INCLUDE_DIRS}")
+message([Main] "PYTHON_LIBRARIES = ${PYTHON_LIBRARIES}")
+message([Main] "PYTHON_EXECUTABLE = ${PYTHON_EXECUTABLE}")
+message([Main] "PYTHON_INCLUDE_DIRS = ${PYTHON_INCLUDE_DIRS}")
 
 ################################################################################
 # Tests
@@ -105,8 +107,10 @@ pybind11_add_module(__${target}__
  )
 
 if(APPLE)
-  set_target_properties(__${target}__ PROPERTIES INSTALL_NAME_DIR "@rpath")
-  set_target_properties(__${target}__ PROPERTIES INSTALL_RPATH "@loader_path")
+  set_target_properties(__${target}__ PROPERTIES MACOSX_RPATH TRUE)
+  set_target_properties(__${target}__ PROPERTIES CMAKE_INSTALL_RPATH_USE_LINK_PATH TRUE)
+#  set_target_properties(__${target}__ PROPERTIES INSTALL_NAME_DIR "@rpath")
+#  set_target_properties(__${target}__ PROPERTIES INSTALL_RPATH "@loader_path")
 else()
   set_target_properties(__${target}__ PROPERTIES INSTALL_RPATH "$ORIGIN")
   set_target_properties(__${target}__ PROPERTIES LINK_FLAGS "-shared")
