--- a/python-package/CMakeLists.txt
+++ b/python-package/CMakeLists.txt
@@ -4,23 +4,15 @@ set(target "targeted_c")
 set(RUN_TESTS TRUE)
 set(CMAKE_CXX_STANDARD 11)
 set(CMAKE_CXX_STANDARD_REQUIRED ON)
-#set(CMAKE_BUILD_WITH_INSTALL_RPATH ON)
-#set(CMAKE_INSTALL_RPATH_USE_LINK_PATH TRUE)
-
-if(APPLE)
-  set(CMAKE_INSTALL_RPATH "@executable_path")
-  set(CMAKE_INSTALL_NAME_DIR "@executable_path")
-  set(CMAKE_BUILD_WITH_INSTALL_RPATH ON)
-else()
-  set(CMAKE_BUILD_WITH_INSTALL_RPATH ON)
-  set(CMAKE_INSTALL_RPATH "$ORIGIN")
-endif()
+set(CMAKE_BUILD_WITH_INSTALL_RPATH ON)
  
 project(${target} CXX)
 
+################################################################################
+
 find_program(CCACHE_FOUND ccache)
 if(CCACHE_FOUND)
-    message(STATUS "******************** Using ccache")
+    message(STATUS "[Main] Using ccache")
     set_property(GLOBAL PROPERTY RULE_LAUNCH_COMPILE ccache)
     set_property(GLOBAL PROPERTY RULE_LAUNCH_LINK ccache)
 endif(CCACHE_FOUND)
@@ -107,10 +99,10 @@ pybind11_add_module(__${target}__
  )
 
 if(APPLE)
-  set_target_properties(__${target}__ PROPERTIES MACOSX_RPATH TRUE)
-  set_target_properties(__${target}__ PROPERTIES CMAKE_INSTALL_RPATH_USE_LINK_PATH TRUE)
-#  set_target_properties(__${target}__ PROPERTIES INSTALL_NAME_DIR "@rpath")
-#  set_target_properties(__${target}__ PROPERTIES INSTALL_RPATH "@loader_path")
+  # set_target_properties(__${target}__ PROPERTIES MACOSX_RPATH TRUE)
+  # set_target_properties(__${target}__ PROPERTIES CMAKE_INSTALL_RPATH_USE_LINK_PATH TRUE)
+  set_target_properties(__${target}__ PROPERTIES INSTALL_NAME_DIR "@rpath")
+  set_target_properties(__${target}__ PROPERTIES INSTALL_RPATH "@loader_path")
 else()
   set_target_properties(__${target}__ PROPERTIES INSTALL_RPATH "$ORIGIN")
   set_target_properties(__${target}__ PROPERTIES LINK_FLAGS "-shared")
@@ -118,4 +110,12 @@ endif()
 
 target_link_libraries(__${target}__ PRIVATE armadillo)
 
-
+#set(CMAKE_INSTALL_RPATH_USE_LINK_PATH TRUE)
+# if(APPLE)
+#   set(CMAKE_INSTALL_RPATH "@executable_path")
+#   set(CMAKE_INSTALL_NAME_DIR "@executable_path")
+#   set(CMAKE_BUILD_WITH_INSTALL_RPATH ON)
+# else()
+#   set(CMAKE_BUILD_WITH_INSTALL_RPATH ON)
+#   set(CMAKE_INSTALL_RPATH "$ORIGIN")
+# endif()
