--- a/.travis.yml
+++ b/.travis.yml
@@ -1,10 +1,15 @@
-language: python
+language: generic
+
+env:
+  global:
+    # - TWINE_USERNAME=__token__
 
 jobs:
   include:
-# --------------------------------------------------------------------------------    
-    - services: docker
-      name: "Python: linux wheels"
+    # --------------------------------------------------------------------------------
+    
+    - name: "linux wheels"
+      services: docker      
       install:
         - python3 -m pip install cibuildwheel==1.3.0
       script:
@@ -17,9 +22,11 @@ jobs:
           python3 -m pip install twine
           python3 -m twine upload wheelhouse/*.whl
           fi
-# --------------------------------------------------------------------------------    
-    - os: osx
-      name: "Python: osx wheels"
+          
+    # --------------------------------------------------------------------------------
+    
+    - name: "osx wheels"
+      os: osx      
       language: shell
       install:
         - python3 -m pip install cibuildwheel==1.3.0      
@@ -33,9 +40,11 @@ jobs:
           python3 -m pip install twine
           python3 -m twine upload wheelhouse/*.whl
           fi
-# --------------------------------------------------------------------------------            
-    # - os: windows
-    #   name: "Python: windows wheels"
+          
+    # --------------------------------------------------------------------------------
+    
+    # - name: "Python: windows wheels"
+    #   os: windows
     #   language: shell
     #   before_install:
     #     - choco install python --version 3.8.0
@@ -47,10 +56,13 @@ jobs:
     #   script:
     #     - make exportpy
     #     - cp lib/armadillo/examples/lib_win64/* lib/armadillo/
-    #     - cd build/python; CIBW_SKIP="cp27-* cp35-* cp36-* cp37-*" python -m cibuildwheel --output-dir wheelhouse
-# --------------------------------------------------------------------------------       
-    - language: cpp
-      name: "C++ library"
+    #     - cd build/python; CIBW_SKIP="cp27-* cp35-* cp36-* cp37-*"
+    #   python -m cibuildwheel --output-dir wheelhouse
+    
+    # --------------------------------------------------------------------------------
+    
+    - name: "C++ library"
+      language: cpp      
       os:
         - linux
       compiler:
@@ -65,10 +77,12 @@ jobs:
       script:
         - make init
         - make test
-# --------------------------------------------------------------------------------            
-    - language: r    
-      r: release
-      name: "R: targeted"
+        
+    # --------------------------------------------------------------------------------
+    
+    - name: "R: targeted"
+      language: r    
+      r: release      
       warnings_are_errors: true
       cache: packages    
       addons:
@@ -85,10 +99,12 @@ jobs:
         - echo    
       script:
         - make checkr pkg=targeted
-# --------------------------------------------------------------------------------    
-    - language: r    
-      r: release
-      name: "R: gof"
+        
+    # --------------------------------------------------------------------------------
+    
+    - name: "R: gof"
+      language: r    
+      r: release      
       warnings_are_errors: true
       cache: packages    
       addons:
@@ -101,11 +117,15 @@ jobs:
             - r-cran-rcpp
             - r-cran-rcpparmadillo
             - r-cran-testthat
+      install:
+        - echo
       script:
         - make checkr pkg=gof
-# --------------------------------------------------------------------------------            
-    - language: python
-      name: "python: release"
+        
+    # --------------------------------------------------------------------------------
+    
+    - name: "Python: release"
+      language: python      
       os:
         - linux
       addons:
@@ -123,12 +143,19 @@ jobs:
       install:
         - pip3 install pytest-runner pytest-cov 
       script:
-        - cd python-package; python3 setup.py install
+        - cd python-package
+        - python3 setup.py install
         - bin/test_targeted
-# --------------------------------------------------------------------------------            
+      after_success:
+        # if the release was tagged, upload them to PyPI
+        - |
+          if [[ $TRAVIS_TAG ]]; then
+          python3 setup.py sdist          
+          python3 -m pip install twine
+          python3 -m twine upload dist/*.tar.gz
+          fi
         
-env:
-  global:
-    # - TWINE_USERNAME=__token__
+    # --------------------------------------------------------------------------------            
+        
     
 
