--- a/.travis.yml
+++ b/.travis.yml
@@ -9,6 +9,7 @@ jobs:
     # --------------------------------------------------------------------------------
     
     - name: "linux wheels"
+      language: python
       services: docker      
       install:
         - python3 -m pip install cibuildwheel==1.3.0
