--- a/.travis.yml
+++ b/.travis.yml
@@ -1,4 +1,5 @@
 language: generic
+os: linux
 
 env:
   global:
@@ -7,14 +8,14 @@ env:
 jobs:
   include:
     # --------------------------------------------------------------------------------
-    
+
     - name: "linux wheels"
-      language: python
-      services: docker      
+      services: docker
+      language: python      
       install:
         - python3 -m pip install cibuildwheel==1.3.0
       script:
-        - make exportpy  
+        - make exportpy
         - cd build/python; CIBW_SKIP="cp27-* cp35-*" CIBW_BEFORE_BUILD="yum install -y make lapack-devel git blas-devel SuperLU-devel python-devel; pip install cmake" python3 -m cibuildwheel --output-dir wheelhouse
       after_success:
         # if the release was tagged, upload them to PyPI
@@ -23,16 +24,16 @@ jobs:
           python3 -m pip install twine
           python3 -m twine upload wheelhouse/*.whl
           fi
-          
+
     # --------------------------------------------------------------------------------
-    
+
     - name: "osx wheels"
-      os: osx      
+      os: osx
       language: shell
       install:
-        - python3 -m pip install cibuildwheel==1.3.0      
+        - python3 -m pip install cibuildwheel==1.3.0
       script:
-        - make exportpy  
+        - make exportpy
         - cd build/python; CIBW_SKIP="cp27-* cp35-*" CIBW_BEFORE_BUILD="pip install cmake" python3 -m cibuildwheel --output-dir wheelhouse
       after_success:
         # if the release was tagged, upload them to PyPI
@@ -41,9 +42,9 @@ jobs:
           python3 -m pip install twine
           python3 -m twine upload wheelhouse/*.whl
           fi
-          
+
     # --------------------------------------------------------------------------------
-    
+
     # - name: "Python: windows wheels"
     #   os: windows
     #   language: shell
@@ -53,19 +54,17 @@ jobs:
     #     - choco install cmake
     #     - export PATH="/c/Python38:/c/Python38/Scripts:$PATH"
     #   install:
-    #     - python -m pip install cibuildwheel==1.3.0        
+    #     - python -m pip install cibuildwheel==1.3.0
     #   script:
     #     - make exportpy
     #     - cp lib/armadillo/examples/lib_win64/* lib/armadillo/
     #     - cd build/python; CIBW_SKIP="cp27-* cp35-* cp36-* cp37-*"
     #   python -m cibuildwheel --output-dir wheelhouse
-    
+
     # --------------------------------------------------------------------------------
-    
+
     - name: "C++ library"
-      language: cpp      
-      os:
-        - linux
+      language: cpp
       compiler:
         - clang
         - gcc
@@ -78,36 +77,36 @@ jobs:
       script:
         - make init
         - make test
-        
+
     # --------------------------------------------------------------------------------
-    
+
     - name: "R: targeted"
-      language: r    
-      r: release      
+      language: r
+      r: release
       warnings_are_errors: true
-      cache: packages    
+      cache: packages
       addons:
         apt:
           packages:
             - r-cran-covr
             - r-cran-futile.logger
             - r-cran-lava
-            - r-cran-optimx          
+            - r-cran-optimx
             - r-cran-rcpp
             - r-cran-rcpparmadillo
             - r-cran-testthat
       install:
-        - echo    
+        - echo
       script:
         - make checkr pkg=targeted
-        
+
     # --------------------------------------------------------------------------------
-    
+
     - name: "R: gof"
-      language: r    
-      r: release      
+      language: r
+      r: release
       warnings_are_errors: true
-      cache: packages    
+      cache: packages
       addons:
         apt:
           packages:
@@ -122,13 +121,11 @@ jobs:
         - echo
       script:
         - make checkr pkg=gof
-        
+
     # --------------------------------------------------------------------------------
-    
+
     - name: "Python: release"
-      language: python      
-      os:
-        - linux
+      language: python
       addons:
         apt:
           packages:
@@ -142,19 +139,21 @@ jobs:
             - python3-pandas
             - python3-numpy
       install:
-        - pip3 install pytest-runner pytest-cov 
+        - pip3 install pytest-runner pytest-cov
       script:
         - cd python-package
         - python3 setup.py install
+        - python3 setup.py test
         - bin/test_targeted
+        - python3 -m targeted
       after_success:
         # if the release was tagged, upload them to PyPI
         - |
           if [[ $TRAVIS_TAG ]]; then
-          python3 setup.py sdist          
+          python3 setup.py sdist
           python3 -m pip install twine
           python3 -m twine upload dist/*.tar.gz
           fi
-        
-    # --------------------------------------------------------------------------------            
-        
+
+    # --------------------------------------------------------------------------------
+
