--- a/python-package/.gitattributes
+++ b/python-package/.gitattributes
@@ -1,4 +1,4 @@
-src/armadillo export-ignore
-src/catch2 export-ignore
-src/pybind11 export-ignore
-src/target-cpp export-ignore
+lib/armadillo export-ignore
+lib/catch2 export-ignore
+lib/pybind11 export-ignore
+lib/target-cpp export-ignore
