--- a/python-package/.gitattributes
+++ b/python-package/.gitattributes
@@ -2,3 +2,4 @@ lib/armadillo export-ignore
 lib/catch2 export-ignore
 lib/pybind11 export-ignore
 lib/target-cpp export-ignore
+lib/target-inc export-ignore
