--- a/.travis.yml
+++ b/.travis.yml
@@ -1,15 +1,10 @@
 language: python      
 
-env:
-  global:
-    # - TWINE_USERNAME=__token__
-
 jobs:
   include:
     # --------------------------------------------------------------------------------
-
-    - name: "linux wheels"
-      services: docker
+    - services: docker
+      name: "linux wheels"
       install:
         - python3 -m pip install cibuildwheel==1.3.0
       script:
@@ -155,3 +150,6 @@ jobs:
 
     # --------------------------------------------------------------------------------
 
+env:
+  global:
+    # - TWINE_USERNAME=__token__
