Rpath disabled on Linux build

--- a/python-package/CMakeLists.txt
+++ b/python-package/CMakeLists.txt
@@ -4,7 +4,9 @@ set(target "targeted_c")
 set(RUN_TESTS TRUE)
 set(CMAKE_CXX_STANDARD 11)
 set(CMAKE_CXX_STANDARD_REQUIRED ON)
-set(CMAKE_BUILD_WITH_INSTALL_RPATH ON)
+if(APPLE)
+  set(CMAKE_BUILD_WITH_INSTALL_RPATH ON)
+endif()
 project(${target} CXX)
 
 ################################################################################
@@ -41,7 +43,6 @@ else()
   find_package(LAPACK REQUIRED)
   set(DETECT_HDF5 OFF CACHE BOOL "Disable Armadillo HDF5 support")
   add_subdirectory(lib/armadillo)
-  include_directories(lib/armadillo/include)
 endif ()
 
 message([Main] " ARMADILLO_LIBRARIES = ${ARMADILLO_LIBRARIES}")
@@ -102,8 +103,9 @@ if(APPLE)
   set_target_properties(__${target}__ PROPERTIES INSTALL_NAME_DIR "@rpath")
   set_target_properties(__${target}__ PROPERTIES INSTALL_RPATH "@loader_path")
 else()
-  set_target_properties(__${target}__ PROPERTIES INSTALL_RPATH "$ORIGIN")
+  set_target_properties(__${target}__ PROPERTIES INSTALL_RPATH "$ORIGIN;.")
   set_target_properties(__${target}__ PROPERTIES LINK_FLAGS "-shared")
+  #set_target_properties(__${target}__ PROPERTIES LINK_FLAGS "-Wl,-rpath,$ORIGIN")
 endif()
 
 target_link_libraries(__${target}__ PRIVATE armadillo)
