--- a/.travis.yml
+++ b/.travis.yml
@@ -1,5 +1,10 @@
 language: generic
 
+branches:
+  only:
+  - master
+  - test
+
 jobs:
   include:
     # --------------------------------------------------------------------------------
@@ -8,9 +13,12 @@ jobs:
       name: "linux wheels"
       install:
         - python3 -m pip install cibuildwheel==1.3.0
+      env:
+        - CIBW_SKIP="cp27-* cp35-*"
+        - CIBW_BEFORE_BUILD="yum install -y make lapack-devel blas-devel python-devel; pip install cmake; cd lib/armadillo; cmake -B build && cd build; make install; cd ../../.."
       script:
         - make exportpy
-        - cd build/python; CIBW_SKIP="cp27-* cp35-*" CIBW_BEFORE_BUILD="yum install -y make lapack-devel blas-devel python-devel; pip install cmake; cd lib/armadillo; ./configure && make install & cd ../.." python3 -m cibuildwheel --output-dir wheelhouse
+        - cd build/python; python3 -m cibuildwheel --output-dir wheelhouse
       after_success:
         # if the release was tagged, upload them to PyPI
         - |
@@ -26,9 +34,12 @@ jobs:
       language: shell
       install:
         - python3 -m pip install cibuildwheel==1.3.0
+      env:
+        - CIBW_SKIP="cp27-* cp35-*"
+        - CIBW_BEFORE_BUILD="pip install cmake"
       script:
         - make exportpy
-        - cd build/python; CIBW_SKIP="cp27-* cp35-*" CIBW_BEFORE_BUILD="pip install cmake" python3 -m cibuildwheel --output-dir wheelhouse
+        - cd build/python; python3 -m cibuildwheel --output-dir wheelhouse
       after_success:
         # if the release was tagged, upload them to PyPI
         - |
