--- a/.travis.yml
+++ b/.travis.yml
@@ -3,10 +3,10 @@ language: generic
 jobs:
   include:
     # --------------------------------------------------------------------------------
-    - if branch: deploy
+    - name: "linux wheels"      
+      if: branch=deploy
       services: docker
-      language: python
-      name: "linux wheels"      
+      language: python      
       install:
         - python3 -m pip install cibuildwheel==1.3.0
       env:
@@ -25,8 +25,8 @@ jobs:
 
     # --------------------------------------------------------------------------------
 
-    - if branch: deploy
-      name: "osx wheels"
+    - name: "osx wheels"
+      if: branch=deploy      
       os: osx
       language: shell
       install:
@@ -47,7 +47,7 @@ jobs:
 
     # --------------------------------------------------------------------------------
 
-    # - if branch: deploy
+    # - if: branch=deploy
     #   name: "Python: windows wheels"
     #   os: windows
     #   language: shell
