--- a/.travis.yml
+++ b/.travis.yml
@@ -4,7 +4,7 @@ jobs:
   include:
     # --------------------------------------------------------------------------------
     - name: "linux wheels"      
-      if: branch=deploy
+      if: branch IN (deploy)
       services: docker
       language: python      
       install:
@@ -26,7 +26,7 @@ jobs:
     # --------------------------------------------------------------------------------
 
     - name: "osx wheels"
-      if: branch=deploy      
+      if: branch IN (deploy)
       os: osx
       language: shell
       install:
